# libcfs

./: CMakeLists.txt  README.md
docs/: DIRECTORY.md  PATH.md  README.md  RESULT.md
include/: directory.h  path.h  result.h  util.h
src/: CMakeLists.txt  directory.c  path.c  path_internal.c  result.c  result_internal.c
tests/: CMakeLists.txt  directory_test.c  path_test.c  result_test.c
tests/path/: CMakeLists.txt  path_dir_from_current_dir.c  path_dir_from_home.c  path_dir_test.c  path_exists_test.c  path_file_from_current_dir.c  path_file_from_home.c  path_file_test.c  path_home_test.c
